--- a/kyrsovaya.csproj
+++ b/kyrsovaya.csproj
@@ -103,7 +103,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\rodchenkoctt.ttf" />
+    <EmbeddedResource Include="Resources\rodchenkoctt.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
